--- a/go/blumgi-castle.html
+++ b/go/blumgi-castle.html
@@ -1,6 +1,5 @@
 <!doctype html>
 <html class="no-js" lang="zxx">
-
 <head>
 
     <meta name="robots" content="noindex, follow" />
@@ -134,7 +133,7 @@
 
     <div class="row">
       <div class="col-md-10">
-  <iframe class="gm-iframe" id="gm-area" src="https://bonbang.github.io/store77/ovo/" width="810" height="540" scrolling="none" frameborder="0" allowfullscreen></iframe>
+  <iframe class="gm-iframe" id="gm-area" src="https://sudoku-online.github.io/store77/ovo/" width="810" height="540" scrolling="none" frameborder="0" allowfullscreen></iframe>
    <div style="padding-top: 10px;" class="container" align="Center"> 
       <button  class="btn theme-btn-1 btn-effect-1 text-uppercase" onclick="openFullscreen();">FullScreen</button>
 
@@ -209,7 +208,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/getaway-shootout.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/getaway-shootout.png">
+                            <img src="https://sudoku-online.github.io/img/getaway-shootout.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -224,7 +223,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/car-rush.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/car-rush.png">
+                            <img src="https://sudoku-online.github.io/img/car-rush.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -239,7 +238,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/cat-trap.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/cat-trap.png">
+                            <img src="https://sudoku-online.github.io/img/cat-trap.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -254,7 +253,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/rocket-soccer-derby.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/rocket-soccer-derby.png">
+                            <img src="https://sudoku-online.github.io/img/rocket-soccer-derby.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -269,7 +268,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/bitlife.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/bitlife.png">
+                            <img src="https://sudoku-online.github.io/img/bitlife.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -284,7 +283,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/fancy-pants-3.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/fancy-pants-3.png">
+                            <img src="https://sudoku-online.github.io/img/fancy-pants-3.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -299,7 +298,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/riddle-school.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/riddle-school.png">
+                            <img src="https://sudoku-online.github.io/img/riddle-school.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -314,7 +313,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/sausage-flip.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/sausage-flip.png">
+                            <img src="https://sudoku-online.github.io/img/sausage-flip.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -329,7 +328,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/soccer-skills-champions-league.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/soccer-skills-champions-league.png">
+                            <img src="https://sudoku-online.github.io/img/soccer-skills-champions-league.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -344,7 +343,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/wordle-unlimited.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/wordle-unlimited.png">
+                            <img src="https://sudoku-online.github.io/img/wordle-unlimited.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -359,7 +358,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/flash-tetris.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/flash-tetris.png">
+                            <img src="https://sudoku-online.github.io/img/flash-tetris.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -374,7 +373,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/temple-run-2.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/temple-run-2.png">
+                            <img src="https://sudoku-online.github.io/img/temple-run-2.png">
                             <div class="product-badge">       
                             </div>
                         </div>
