--- a/go/blumgi-slime.html
+++ b/go/blumgi-slime.html
@@ -1,6 +1,5 @@
 <!doctype html>
 <html class="no-js" lang="zxx">
-
 <head>
 
     <meta name="robots" content="noindex, follow" />
@@ -134,7 +133,7 @@
 
     <div class="row">
       <div class="col-md-10">
-  <iframe class="gm-iframe" id="gm-area" src="https://bonbang.github.io/store77/ovo/" width="810" height="540" scrolling="none" frameborder="0" allowfullscreen></iframe>
+  <iframe class="gm-iframe" id="gm-area" src="https://sudoku-online.github.io/store77/ovo/" width="810" height="540" scrolling="none" frameborder="0" allowfullscreen></iframe>
    <div style="padding-top: 10px;" class="container" align="Center"> 
       <button  class="btn theme-btn-1 btn-effect-1 text-uppercase" onclick="openFullscreen();">FullScreen</button>
 
@@ -209,7 +208,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/soccer-skills-euro-cup.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/soccer-skills-euro-cup.png">
+                            <img src="https://sudoku-online.github.io/img/soccer-skills-euro-cup.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -224,7 +223,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/bullet-force.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/bullet-force.png">
+                            <img src="https://sudoku-online.github.io/img/bullet-force.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -239,7 +238,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/water-color-sort.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/water-color-sort.png">
+                            <img src="https://sudoku-online.github.io/img/water-color-sort.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -254,7 +253,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/idle-digging-tycoon.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/idle-digging-tycoon.png">
+                            <img src="https://sudoku-online.github.io/img/idle-digging-tycoon.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -269,7 +268,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/vex-7.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/vex-7.png">
+                            <img src="https://sudoku-online.github.io/img/vex-7.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -284,7 +283,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/football-masters.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/football-masters.png">
+                            <img src="https://sudoku-online.github.io/img/football-masters.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -299,7 +298,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/temple-of-boom.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/temple-of-boom.png">
+                            <img src="https://sudoku-online.github.io/img/temple-of-boom.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -314,7 +313,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/bike-trials-winter-1.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/bike-trials-winter-1.png">
+                            <img src="https://sudoku-online.github.io/img/bike-trials-winter-1.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -329,7 +328,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/stickman-hook.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/stickman-hook.png">
+                            <img src="https://sudoku-online.github.io/img/stickman-hook.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -344,7 +343,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/big-shot-boxing.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/big-shot-boxing.png">
+                            <img src="https://sudoku-online.github.io/img/big-shot-boxing.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -359,7 +358,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/cyber-cars-punk-racing.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/cyber-cars-punk-racing.png">
+                            <img src="https://sudoku-online.github.io/img/cyber-cars-punk-racing.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -374,7 +373,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/funny-shooter-2.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/funny-shooter-2.png">
+                            <img src="https://sudoku-online.github.io/img/funny-shooter-2.png">
                             <div class="product-badge">       
                             </div>
                         </div>
