--- a/go/idle-mining-empire.html
+++ b/go/idle-mining-empire.html
@@ -134,7 +134,7 @@
 
     <div class="row">
       <div class="col-md-10">
-  <iframe class="gm-iframe" id="gm-area" src="https://bonbang.github.io/store77/ovo/" width="810" height="540" scrolling="none" frameborder="0" allowfullscreen></iframe>
+  <iframe class="gm-iframe" id="gm-area" src="https://sudoku-online.github.io/store77/ovo/" width="810" height="540" scrolling="none" frameborder="0" allowfullscreen></iframe>
    <div style="padding-top: 10px;" class="container" align="Center"> 
       <button  class="btn theme-btn-1 btn-effect-1 text-uppercase" onclick="openFullscreen();">FullScreen</button>
 
@@ -209,7 +209,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/basketball-line.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/basketball-line.png">
+                            <img src="https://sudoku-online.github.io/img/basketball-line.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -224,7 +224,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/brain-test-tricky-puzzles.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/brain-test-tricky-puzzles.png">
+                            <img src="https://sudoku-online.github.io/img/brain-test-tricky-puzzles.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -239,7 +239,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/soccer-skills-euro-cup.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/soccer-skills-euro-cup.png">
+                            <img src="https://sudoku-online.github.io/img/soccer-skills-euro-cup.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -254,7 +254,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/temple-run-2.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/temple-run-2.png">
+                            <img src="https://sudoku-online.github.io/img/temple-run-2.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -269,7 +269,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/car-rush.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/car-rush.png">
+                            <img src="https://sudoku-online.github.io/img/car-rush.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -284,7 +284,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/stickman-bike.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/stickman-bike.png">
+                            <img src="https://sudoku-online.github.io/img/stickman-bike.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -299,7 +299,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/water-color-sort.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/water-color-sort.png">
+                            <img src="https://sudoku-online.github.io/img/water-color-sort.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -314,7 +314,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/short-ride.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/short-ride.png">
+                            <img src="https://sudoku-online.github.io/img/short-ride.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -329,7 +329,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/cyber-cars-punk-racing.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/cyber-cars-punk-racing.png">
+                            <img src="https://sudoku-online.github.io/img/cyber-cars-punk-racing.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -344,7 +344,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/slope.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/slope.png">
+                            <img src="https://sudoku-online.github.io/img/slope.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -359,7 +359,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/cookie-clicker.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/cookie-clicker.png">
+                            <img src="https://sudoku-online.github.io/img/cookie-clicker.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -374,7 +374,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/temple-of-boom.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/temple-of-boom.png">
+                            <img src="https://sudoku-online.github.io/img/temple-of-boom.png">
                             <div class="product-badge">       
                             </div>
                         </div>
